[gd_scene load_steps=44 format=2]

[ext_resource path="res://Content/Scripts/PlayerScripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Content/Assets/Player/SpringArmMovement.gd" type="Script" id=2]
[ext_resource path="res://Content/Assets/Player/Player_Mesh.gltf" type="PackedScene" id=3]
[ext_resource path="res://Content/Colors/resurrect-64-1x.png" type="Texture" id=4]
[ext_resource path="res://Content/Colors/resurrect64-1x.png" type="Texture" id=5]
[ext_resource path="res://Content/Scenes/Health.tscn" type="PackedScene" id=6]
[ext_resource path="res://Content/Scenes/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Content/Scenes/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Content/Sounds/SFX/footstep_grass_000.ogg" type="AudioStream" id=9]
[ext_resource path="res://Content/Sounds/SFX/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://Content/Sounds/SFX/hitHurt.wav" type="AudioStream" id=11]
[ext_resource path="res://Content/Scenes/FootDust.tscn" type="PackedScene" id=12]
[ext_resource path="res://Content/Assets/heart_sprite.png" type="Texture" id=13]
[ext_resource path="res://Content/Assets/Coin.svg" type="Texture" id=14]
[ext_resource path="res://Content/Font/upheaval/upheavtt.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Content/Scripts/Player_Interface.gd" type="Script" id=16]

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "T-Pose-loop"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Jumping-loop"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Running-loop"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Walking-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachine" id=34]
states/Idle/node = SubResource( 29 )
states/Idle/position = Vector2( 168, 130 )
states/Jumping/node = SubResource( 31 )
states/Jumping/position = Vector2( 55, 257 )
states/Running/node = SubResource( 32 )
states/Running/position = Vector2( 415, 119 )
states/Walking/node = SubResource( 33 )
states/Walking/position = Vector2( 415, 257 )
transitions = [ "Idle", "Walking", SubResource( 37 ), "Walking", "Idle", SubResource( 38 ), "Idle", "Jumping", SubResource( 39 ), "Jumping", "Idle", SubResource( 40 ), "Idle", "Running", SubResource( 41 ), "Running", "Idle", SubResource( 42 ), "Running", "Walking", SubResource( 45 ), "Walking", "Running", SubResource( 46 ), "Walking", "Jumping", SubResource( 47 ), "Jumping", "Walking", SubResource( 48 ), "Jumping", "Running", SubResource( 49 ), "Running", "Jumping", SubResource( 50 ) ]
start_node = "Idle"
graph_offset = Vector2( -198, -28 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[sub_resource type="SpatialMaterial" id=52]
albedo_texture = ExtResource( 5 )
metallic = 0.25
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=28]
albedo_texture = ExtResource( 4 )
metallic = 0.25
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 4 )

[sub_resource type="Shader" id=53]
code = "/**
* Shadow 2D.
* License: CC0
* https://creativecommons.org/publicdomain/zero/1.0/
*/
shader_type canvas_item;
render_mode blend_mix;

uniform vec2 deform = vec2(2.0, 2.0);
uniform vec2 offset = vec2(0.0, 0.0);
uniform vec4 modulate : hint_color;

//uniform vec2 texture_size; //uncomment for GLES2

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;
	vec2 uv = UV;
	float sizex = float(textureSize(TEXTURE,int(ps.x)).x); //comment for GLES2
	float sizey = float(textureSize(TEXTURE,int(ps.y)).y); //comment for GLES2
	//float sizex = texture_size.x; //uncomment for GLES2
	//float sizey = texture_size.y; //uncomment for GLES2
	uv.y+=offset.y*ps.y;
	uv.x+=offset.x*ps.x;
	float decalx=((uv.y-ps.x*sizex)*deform.x);
	float decaly=((uv.y-ps.y*sizey)*deform.y);
	uv.x += decalx;
	uv.y += decaly;
	vec4 shadow = vec4(modulate.rgb, texture(TEXTURE, uv).a * modulate.a);
	vec4 col = texture(TEXTURE, UV);
	COLOR = mix(shadow, col, col.a);
}"

[sub_resource type="ShaderMaterial" id=54]
shader = SubResource( 53 )
shader_param/deform = Vector2( 0.1, 0.1 )
shader_param/offset = Vector2( 0, 0 )
shader_param/modulate = Color( 0, 0, 0, 0.458824 )

[sub_resource type="StyleBoxFlat" id=55]
bg_color = Color( 0.145098, 0.137255, 0.188235, 0.47451 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=58]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=56]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=57]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 15 )

[sub_resource type="CapsuleShape" id=51]
height = 0.933756

[node name="Player" type="KinematicBody" groups=["Player"]]
collision/safe_margin = 0.05
moving_platform_apply_velocity_on_leave = 1
script = ExtResource( 1 )
foot_dust = ExtResource( 12 )
animationTree = NodePath("AnimationTree")
deceleration = 8
jump_height = 15.0
gravity_multiplier = 2
low_jump_gravity_multiplier = 1.5
air_control = 0.9

[node name="SpringArm" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 8 )
spring_length = 9.0
margin = 0.2
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="SpringArm"]
current = true
far = 400.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 34 )
anim_player = NodePath("../PlayerMesh/AnimationPlayer")
active = true
parameters/playback = SubResource( 26 )

[node name="PlayerMesh" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, -0.387671, 0 )

[node name="Body" parent="PlayerMesh/Armature/Skeleton" index="0"]
material/0 = SubResource( 52 )
material/1 = SubResource( 28 )

[node name="AnimationPlayer" parent="PlayerMesh" index="1"]
playback_default_blend_time = 0.1

[node name="Foot" type="Spatial" parent="PlayerMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.05951, 0.649884 )

[node name="Health" parent="." instance=ExtResource( 6 )]
max_amount = 3

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 16 )

[node name="PauseMenu" parent="UI" instance=ExtResource( 8 )]
visible = false

[node name="Interface" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
mouse_filter = 2

[node name="HealthBar" parent="UI/Interface" instance=ExtResource( 7 )]
margin_left = 37.0
margin_top = 24.0
margin_right = 243.0
margin_bottom = 53.0

[node name="HeartSprite" type="Sprite" parent="UI/Interface"]
material = SubResource( 54 )
position = Vector2( 48, 38 )
scale = Vector2( 0.0827414, 0.0827414 )
texture = ExtResource( 13 )

[node name="CoinPanel" type="Panel" parent="UI/Interface"]
margin_left = 824.0
margin_top = 10.0
margin_right = 1013.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 55 )

[node name="ScorePanel" type="Panel" parent="UI/Interface"]
margin_left = 880.0
margin_top = 95.0
margin_right = 1011.0
margin_bottom = 138.0
custom_styles/panel = SubResource( 55 )

[node name="Score" type="Label" parent="UI/Interface"]
margin_left = 897.0
margin_top = 100.0
margin_right = 997.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 58 )
text = "0"
align = 1
valign = 1

[node name="Coin" type="Sprite" parent="UI/Interface"]
position = Vector2( 867, 50 )
scale = Vector2( 0.226, 0.226 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="UI/Interface"]
margin_left = 901.0
margin_top = 32.0
margin_right = 925.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 56 )
text = "X"

[node name="CoinCounter" type="Label" parent="UI/Interface"]
margin_left = 935.0
margin_top = 22.0
margin_right = 971.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 57 )
text = "0"

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 51 )

[node name="EnemyDetection" type="Area" parent="."]

[node name="CollisionEnemy" type="CollisionShape" parent="EnemyDetection"]
transform = Transform( 1.1, 0, 0, 0, -4.80825e-08, 1, 0, -1.1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 51 )

[node name="Jumping" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 10 )
unit_db = -55.0
unit_size = 0.1
bus = "SFX"

[node name="Walking" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = -80.0
unit_size = 0.3
pitch_scale = 1.3
out_of_range_mode = 1
bus = "SFX"

[node name="Running" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = -75.0
unit_size = 0.3
pitch_scale = 1.6
out_of_range_mode = 1
bus = "SFX"

[node name="Hurt" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 55.0
unit_size = 0.1
bus = "SFX"

[connection signal="collected_coin" from="." to="UI" method="_on_Player_collected_coin"]
[connection signal="body_entered" from="EnemyDetection" to="." method="_on_EnemyDetection_body_entered"]

[editable path="PlayerMesh"]
